--- a/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
+++ b/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
@@ -1,38 +1,63 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-            <div style="width: 75px;">
-                <span>
-                    <button mat-icon-button [matMenuTriggerFor]="menuCadastrar" aria-label="Example icon-button with a menu">
-                        Cadastrar
+        <div style="width: 75px;">
+            <span>
+                <button routerLink="/home" data-toggle="tooltip" title="Página inicial" mat-icon-button>
+                    <mat-icon>home</mat-icon>
+                </button>
+            </span>
+        </div>
+        <div style="width: 75px;">
+            <span>
+            </span>
+        </div>
+        <div style="width: 75px;">
+            <span>
+                <button mat-icon-button [matMenuTriggerFor]="menuCadastrar">
+                    Cadastrar
+                </button>
+                <mat-menu #menuCadastrar="matMenu">
+                    <button mat-menu-item routerLink="/cadastrarLoja">
+                        <mat-icon>store</mat-icon>
+                        <span>Loja</span>
                     </button>
-                    <mat-menu #menuCadastrar="matMenu">
-                        <button mat-menu-item routerLink="/cadastrarLoja">
-                            <mat-icon>people</mat-icon>
-                            <span>Loja</span>
-                        </button>
-                        <button mat-menu-item routerLink="/cadastrarLocatario">
-                            <mat-icon>people</mat-icon>
-                            <span>Locatário</span>
-                        </button>
-                    </mat-menu>
-                </span>
-            </div>
-            <div style="width: 75px;">
-                <span>
-                    <button mat-icon-button [matMenuTriggerFor]="menuListar" aria-label="Example icon-button with a menu">
-                        Listar
+                    <button mat-menu-item routerLink="/cadastrarLocatario">
+                        <mat-icon>people</mat-icon>
+                        <span>Locatário</span>
                     </button>
-                    <mat-menu #menuListar="matMenu">
-                        <button mat-menu-item routerLink="/listarLoja">
-                            <mat-icon>people</mat-icon>
-                            <span>Loja</span>
-                        </button>
-                        <button mat-menu-item routerLink="/listarLocatario">
-                            <mat-icon>people</mat-icon>
-                            <span>Locatário</span>
-                        </button>
-                    </mat-menu>
-                </span>
-            </div>
+                </mat-menu>
+            </span>
+        </div>
+        <div style="width: 75px;">
+            <span>
+                <button mat-icon-button [matMenuTriggerFor]="menuListar">
+                    Listar
+                </button>
+                <mat-menu #menuListar="matMenu">
+                    <button mat-menu-item routerLink="/listarLoja">
+                        <mat-icon>store</mat-icon>
+                        <span>Loja</span>
+                    </button>
+                    <button mat-menu-item routerLink="/listarLocatario">
+                        <mat-icon>people</mat-icon>
+                        <span>Locatário</span>
+                    </button>
+                </mat-menu>
+            </span>
+        </div>
+        <div style="width: 75px; margin-left: 1500px;">
+            <span>
+                <button routerLink="/logout" data-toggle="tooltip" title="Fazer Logout" mat-icon-button>
+                    <mat-icon>exit_to_app</mat-icon>
+                </button>
+            </span>
+        </div>
     </mat-toolbar-row>
+    
 </mat-toolbar>
+
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
