add component loja create

--- a/AdministracaoLojistaAngular/src/app/loja/cadastrar-loja/cadastrar-loja.component.html
+++ b/AdministracaoLojistaAngular/src/app/loja/cadastrar-loja/cadastrar-loja.component.html
@@ -1,1 +1,7 @@
-<p>cadastrar-loja works!</p>
+
+<button mat-raised-button routerLink="/lojaCreate"
+color="primary">
+Nova Loja
+</button>
+
+<app-listar-loja></app-listar-loja>
