atualização lista/cadastro do locatario/loja

--- a/AdministracaoLojistaAngular/src/app/locatario/locatario-create/locatario-create.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/locatario-create/locatario-create.component.html
@@ -4,11 +4,30 @@
         <mat-form-field>
             <input matInput placeholder="Nome">
             <!-- <input matInput placeholder="Nome"
-                [(ngModel)]="product.name" name="name"> -->
+                [(ngModel)]="locatario.name" name="name"> -->
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Nome">
+            <input matInput placeholder="Documento">
+                <!-- <input matInput placeholder="Documento"
+                [(ngModel)]="locatario.documento" documento="documento"> -->
         </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Contato">
+                <!-- <input matInput placeholder="Contato"
+                [(ngModel)]="locatario.contato" contato="contato"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Endereco">
+                <!-- <input matInput placeholder="Endereco"
+                [(ngModel)]="locatario.endereco" endereco="endereco"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Contrato ">
+                <!-- <input matInput placeholder="Nome"
+                [(ngModel)]="locatario.contrato" contrato="contrato"> -->
+        </mat-form-field>
+      
+        
     </form>
     <button mat-raised-button color="primary">
         Salvar
