--- a/AdministracaoLojistaAngular/src/app/loja/listar-loja/listar-loja.component.html
+++ b/AdministracaoLojistaAngular/src/app/loja/listar-loja/listar-loja.component.html
@@ -7,17 +7,46 @@
       </ng-container>
   
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let row">{{row.name}}</td>
-      </ng-container>
-  
-      <!-- Price Column -->
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef>Preço</th>
-        <td mat-cell *matCellDef="let row">{{ row.price | currency: 'BRL' }}</td>
+      <ng-container matColumnDef="loja">
+        <th mat-header-cell *matHeaderCellDef>Nome da Loja</th>
+        <td mat-cell *matCellDef="let row">{{row.loja}}</td>
       </ng-container>
 
+      <ng-container matColumnDef="aluguel">
+        <th mat-header-cell *matHeaderCellDef>Aluguel</th>
+        <td mat-cell *matCellDef="let row">{{ row.aluguel | currency: 'BRL' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="tamanho">
+        <th mat-header-cell *matHeaderCellDef>Tamanho</th>
+        <td mat-cell *matCellDef="let row">{{ row.tamanho | currency: 'BRL' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="setor">
+        <th mat-header-cell *matHeaderCellDef>Setor</th>
+        <td mat-cell *matCellDef="let row">{{ row.setor | currency: 'BRL' }}</td>
+      </ng-container>
+
+      
+      <ng-container matColumnDef="locatario">
+        <th mat-header-cell *matHeaderCellDef>Locatario</th>
+        <td mat-cell *matCellDef="let row">{{ row.locatario | currency: 'BRL' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="categoria">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let row">{{ row.categoria | currency: 'BRL' }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="situacao">
+        <th mat-header-cell *matHeaderCellDef>Situação</th>
+        <td mat-cell *matCellDef="let row">{{ row.situacao | currency: 'BRL' }}</td>
+      </ng-container>
+
+      
+
+      <!-- Price Column -->
+     
       <!-- Action Column -->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
