--- a/AdministracaoLojistaAngular/src/app/loja/loja-create/loja-create.component.html
+++ b/AdministracaoLojistaAngular/src/app/loja/loja-create/loja-create.component.html
@@ -2,12 +2,44 @@
     <mat-card-title>Nova Loja</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Nome">
-            <!-- <input matInput placeholder="Nome"
-                [(ngModel)]="product.name" name="name"> -->
+            <input matInput placeholder="Codigo Loja">
+            <!-- <input matInput placeholder="Codigo Loja"
+                [(ngModel)]="loja.id" id="id"> -->
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Nome">
+            <input matInput placeholder="Nome da loja" >
+              <!-- <input matInput placeholder="Nome da loja"
+                [(ngModel)]="loja.loja" loja="loja"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Valor do aluguel">
+              <!-- <input matInput placeholder="Valor do aluguel"
+                [(ngModel)]="loja.aluguel" aluguel="aluguel"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Tamanho">
+              <!-- <input matInput placeholder="Tamanho"
+                [(ngModel)]="loja.tamanho" tamanho="tamanho"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Setor">
+              <!-- <input matInput placeholder="Setor"
+                [(ngModel)]="loja.setor" setor="setor"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Locatario">
+              <!-- <input matInput placeholder="Locatario"
+                [(ngModel)]="loja.locatario" locatario="locatario"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Categoria">
+              <!-- <input matInput placeholder="Categoria"
+                [(ngModel)]="loja.categoria" categoria="categoria"> -->
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Situação">
+              <!-- <input matInput placeholder="Situação"
+                [(ngModel)]="loja.situacao" situacao="situacao"> -->
         </mat-form-field>
     </form>
     <button mat-raised-button color="primary">
