alteração e listagem na tabela

--- a/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
+++ b/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
@@ -45,7 +45,7 @@
                 </mat-menu>
             </span>
         </div>
-        <div style="width: 75px; margin-left: 1500px;">
+        <div style="width: 75px;">
             <span>
                 <button routerLink="/logout" data-toggle="tooltip" title="Fazer Logout" mat-icon-button>
                     <mat-icon>exit_to_app</mat-icon>
