--- a/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
@@ -1,57 +1,53 @@
 <div class="mat-elevation-z4" style="margin-top: 30px;">
-    <table mat-table>
-      <!-- Id Column -->
+    <table mat-table [dataSource]="locatarios" style="text-align:center">
+
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Id</th>
         <td mat-cell *matCellDef="let row">{{row.id}}</td>
       </ng-container>
   
-      <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
-        <td mat-cell *matCellDef="let row">{{row.name}}</td>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Nome</th>
+        <td mat-cell *matCellDef="let row">{{row.nome}}</td>
       </ng-container>
 
       <ng-container matColumnDef="documento">
-        <th mat-header-cell *matHeaderCellDef>Documento</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Documento</th>
         <td mat-cell *matCellDef="let row">{{row.documento}}</td>
       </ng-container>
 
       <ng-container matColumnDef="contato">
-        <th mat-header-cell *matHeaderCellDef>Contato</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Contato</th>
         <td mat-cell *matCellDef="let row">{{row.contato}}</td>
       </ng-container>
 
       <ng-container matColumnDef="endereco">
-        <th mat-header-cell *matHeaderCellDef>Endereco</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Endereco</th>
         <td mat-cell *matCellDef="let row">{{row.endereco}}</td>
       </ng-container>
   
       <ng-container matColumnDef="contrato">
-        <th mat-header-cell *matHeaderCellDef>Contrato</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Contrato</th>
         <td mat-cell *matCellDef="let row">{{row.contrato}}</td>
       </ng-container>
 
-      <!-- Price Column -->
-      
-      <!-- Action Column -->
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Ações</th>
         <td mat-cell *matCellDef="let row">
-            <!-- <a routerLink="/products/update/{{ row.id }}" class="edit">
+            <a routerLink="/editarLocatario/update/{{ row.id }}" class="edit">
                 <i class="material-icons">
                     edit
                 </i>
             </a>
-            <a routerLink="/products/delete/{{ row.id }}" class="delete">
+            <a routerLink="/editarLocatario/delete/{{ row.id }}" class="delete">
                 <i class="material-icons">
                     delete
                 </i>
-            </a> -->
+            </a>
         </td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" style="text-align:center"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="text-align:center"></tr>
     </table>
   </div>
