--- a/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
+++ b/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
@@ -9,10 +9,6 @@
         </div>
         <div style="width: 75px;">
             <span>
-            </span>
-        </div>
-        <div style="width: 75px;">
-            <span>
                 <button mat-icon-button [matMenuTriggerFor]="menuCadastrar">
                     Cadastrar
                 </button>
@@ -45,7 +41,7 @@
                 </mat-menu>
             </span>
         </div>
-        <div style="width: 75px;">
+        <div style="width: 75px;align-self: left;">
             <span>
                 <button routerLink="/logout" data-toggle="tooltip" title="Fazer Logout" mat-icon-button>
                     <mat-icon>exit_to_app</mat-icon>
