--- a/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
@@ -1,6 +1,5 @@
 <div class="mat-elevation-z4" style="margin-top: 30px;">
     <table mat-table [dataSource]="locatarios" style="text-align:center">
-
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef style="text-align:center">Id</th>
         <td mat-cell *matCellDef="let row">{{row.id}}</td>
@@ -34,12 +33,12 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef style="text-align:center">Ações</th>
         <td mat-cell *matCellDef="let row">
-            <a routerLink="/editarLocatario/update/{{ row.id }}" class="edit">
+            <a routerLink="../cadastrarLocatario/{{ row.id }}" class="edit">
                 <i class="material-icons">
                     edit
                 </i>
             </a>
-            <a routerLink="/editarLocatario/delete/{{ row.id }}" class="delete">
+            <a (click)="delete(row)" class="delete">
                 <i class="material-icons">
                     delete
                 </i>
