--- a/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z4" style="margin-top: 30px;">
+<div class="mat-elevation-z4">
     <table mat-table [dataSource]="locatarios" style="text-align:center">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef style="text-align:center">Id</th>
