--- a/AdministracaoLojistaAngular/src/app/locatario/cadastrar-locatario/cadastrar-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/cadastrar-locatario/cadastrar-locatario.component.html
@@ -33,6 +33,13 @@
                 <mat-error *ngIf="model.errors.required">Favor informar o endereço do locatário.</mat-error>
             </mat-error>
         </mat-form-field>
+        <div style="width: 75px;">
+            <a class="edit">
+                <i class="material-icons">
+                    add_circle
+                </i>
+            </a>
+        </div>
 
         <button mat-raised-button color="primary">Salvar</button>
 
