--- a/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
@@ -33,7 +33,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef style="text-align:center">Ações</th>
         <td mat-cell *matCellDef="let row">
-            <a routerLink="../cadastrarLocatario/{{ row.id }}" class="edit">
+            <a routerLink="../editarLocatario/{{ row.id }}" class="edit">
                 <i class="material-icons">
                     edit
                 </i>
