--- a/AdministracaoLojistaAngular/src/app/locatario/editar-locatario/editar-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/editar-locatario/editar-locatario.component.html
@@ -1,10 +1,10 @@
 <div class="locatario-parent">
     <h2>CADASTRAR LOCATÁRIO</h2>
-    <form class="locatario" id="add-form" (ngSubmit)="f.form.valid && update(f)" #f="ngForm" novalidate>
+    <form class="locatario" id="update-form" (ngSubmit)="f.form.valid && update(f)" #f="ngForm" novalidate>
 
         <mat-form-field class="locatario-full-width">
-            <mat-label> Nome</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.nome" id="model" name="model" #model="ngModel" required  [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+            <mat-label color="black"> Nome</mat-label>
+            <input type="text" matInput value="" [(ngModel)]="locatario.nome" id="nome" name="nome" #model="ngModel" required  [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
             <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
                 <mat-error *ngIf="model.errors.required">Favor informar o nome do locatário.</mat-error>
             </mat-error>
@@ -12,7 +12,7 @@
 
         <mat-form-field class="locatario-full-width">
             <mat-label> Documento</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.documento" id="model" name="model" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+            <input type="text" matInput value="" [(ngModel)]="locatario.documento" id="doc" name="doc" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
             <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
                 <mat-error *ngIf="model.errors.required">Favor informar um número de documento do locatário.</mat-error>
             </mat-error>
@@ -20,7 +20,7 @@
 
         <mat-form-field class="locatario-full-width">
             <mat-label> Contato</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.contato" id="model" name="model" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+            <input type="text" matInput value="" [(ngModel)]="locatario.contato" id="contato" name="contato" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
             <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
                 <mat-error *ngIf="model.errors.required">Favor informar um contato do locatário.</mat-error>
             </mat-error>
@@ -28,9 +28,17 @@
 
         <mat-form-field class="locatario-full-width">
             <mat-label> Endereço</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.endereco" id="model" name="model" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+            <input type="text" matInput value="" [(ngModel)]="locatario.endereco" id="endereco" name="endereco" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
             <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
                 <mat-error *ngIf="model.errors.required">Favor informar o endereço do locatário.</mat-error>
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="locatario-full-width">
+            <mat-label> Endereço</mat-label>
+            <input type="text" matInput value="" [(ngModel)]="locatario.contrato" id="contrato" name="contrato" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+            <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                <mat-error *ngIf="model.errors.required">Favor informar o número do contrato.</mat-error>
             </mat-error>
         </mat-form-field>
 
