--- a/AdministracaoLojistaAngular/src/app/login/login.component.css
+++ b/AdministracaoLojistaAngular/src/app/login/login.component.css
@@ -1,29 +1,18 @@
-:host {
-	flex-grow: 1;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.event-parent{
+    padding: 16px;
+    text-align: center;
+    position: absolute;
+    width:100%;
+}
+.event {
+    display: inline-block;
+    position: relative;
+}
+  
+.event-full-width {
+    width: 100%;
 }
 
-div.input {
-	position: relative;
-}
-
-div.input label {
-	position: absolute;
-	top: 0;
-	transform: translateY(-50%);
-	left: 10px;
-	background: white;
-	padding: 5px 2px;
-}
-
-div.input input {
-	padding: 10px 20px;
-	font-size: 25px;
-	outline: 0;
-}
-
-div.input {
-	margin-top: 20px;
+.label{
+	color: mediumvioletred;
 }
