--- a/AdministracaoLojistaAngular/src/app/login/login.component.html
+++ b/AdministracaoLojistaAngular/src/app/login/login.component.html
@@ -1,13 +1,21 @@
-<form (submit)="loginUser($event)">
-    <div class="input">
-        <label>Username</label>
-        <input type="text" id="userName">
-    </div>
-    <div class="input">
-        <label>Password</label>
-        <input id="password" type="password">
-    </div>
-    <div class="input">
-        <input type="submit" value="Login">
-    </div>
-</form>
+<div class="event-parent">
+    <h2> LOGIN</h2>
+    <form class="event" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field class="event-full-width" >
+            <mat-label class="label"> Usuário</mat-label>
+            <input type="text" matInput value="" 
+            id="loginFormUser" formControlName="username"  required>
+        </mat-form-field>
+       
+        <mat-form-field class="event-full-width">
+            <mat-label class="label"> Senha</mat-label>
+            <input type="password" matInput value="" id="loginFormPassword" formControlName="password"  required >
+            
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="event-full-width" >
+            Entrar
+        </button>
+        <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+                        <hr class="hr-light mb-3 mt-4">
+    </form>
+</div>
