--- a/AdministracaoLojistaAngular/src/app/locatario/editar-locatario/editar-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/editar-locatario/editar-locatario.component.html
@@ -1,48 +1,143 @@
 <div class="locatario-parent">
     <h2>CADASTRAR LOCATÁRIO</h2>
-    <form class="locatario" id="update-form" (ngSubmit)="f.form.valid && update(f)" #f="ngForm" novalidate>
-
-        <mat-form-field class="locatario-full-width">
-            <mat-label color="black"> Nome</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.nome" id="nome" name="nome" #model="ngModel" required  [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
-            <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
-                <mat-error *ngIf="model.errors.required">Favor informar o nome do locatário.</mat-error>
-            </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="locatario-full-width">
-            <mat-label> Documento</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.documento" id="doc" name="doc" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
-            <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
-                <mat-error *ngIf="model.errors.required">Favor informar um número de documento do locatário.</mat-error>
-            </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="locatario-full-width">
-            <mat-label> Contato</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.contato" id="contato" name="contato" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
-            <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
-                <mat-error *ngIf="model.errors.required">Favor informar um contato do locatário.</mat-error>
-            </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="locatario-full-width">
-            <mat-label> Endereço</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.endereco" id="endereco" name="endereco" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
-            <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
-                <mat-error *ngIf="model.errors.required">Favor informar o endereço do locatário.</mat-error>
-            </mat-error>
-        </mat-form-field>
-
-        <mat-form-field class="locatario-full-width">
-            <mat-label> Contrato</mat-label>
-            <input type="text" matInput value="" [(ngModel)]="locatario.contrato" id="contrato" name="contrato" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
-            <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
-                <mat-error *ngIf="model.errors.required">Favor informar o número do contrato.</mat-error>
-            </mat-error>
-        </mat-form-field>
-
-        <button mat-raised-button color="primary">Atualizar</button>
-
-    </form>
-</div>
+        <form class="locatario" id="update-form" (ngSubmit)="f.form.valid && update(f)" #f="ngForm" novalidate>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label"> Nome</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.nome" id="nome" name="nome" #model="ngModel"
+                    required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar o nome do locatário.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label"> Documento</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.documento" id="doc" name="doc" #model="ngModel"
+                    required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar um número de documento do locatário.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Email</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.email" id="email" name="email"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar email do locatário.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Celular</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.celular" id="celular" name="celular"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar celular do locatário.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Rua</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.rua" id="rua" name="rua"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar a rua</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Numero</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.numero" id="numero" name="numero"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar o numero</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Bairro</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.bairro" id="bairro" name="bairro"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar o bairro</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Cidade</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.cidade" id="cidade" name="cidade"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar a cidade</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Estado</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.uf" id="uf" name="uf" #model="ngModel"
+                    required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar o Estado</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Cep</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.cep" id="cep" name="cep"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar o cep</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Aluguel</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.aluguel" id="aluguel" name="aluguel"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar o aluguel do contrato.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Data Inicial</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.dataInicio" id="dataInicio"
+                    name="dataInicio" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar a data incial do contrato.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Data Final</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.dataFim" id="dataFim" name="dataFim"
+                    #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar a data final do contrato.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Data Vencimento</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.dataVencimento" id="dataVencimento"
+                    name="dataVencimento" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar a data vencimento do contrato.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="locatario-full-width">
+                <mat-label class="label">Descrição</mat-label>
+                <input type="text" matInput value="" [(ngModel)]="locatario.descricao" id="descricao"
+                    name="descricao" #model="ngModel" required [ngClass]="{ 'is-invalid': f.submitted && model.invalid }">
+                <mat-error *ngIf="f.submitted && model.invalid" class="invalid-feedback">
+                    <mat-error *ngIf="model.errors.required">Favor informar a descrição do contrato.</mat-error>
+                </mat-error>
+            </mat-form-field>
+    
+            <button mat-raised-button color="primary">Salvar</button>
+    
+        </form>
+    </div>
