--- a/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
+++ b/AdministracaoLojistaAngular/src/app/locatario/lista-locatario/lista-locatario.component.html
@@ -11,23 +11,28 @@
       </ng-container>
 
       <ng-container matColumnDef="documento">
-        <th mat-header-cell *matHeaderCellDef style="text-align:center">Documento</th>
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Cpf</th>
         <td mat-cell *matCellDef="let row">{{row.documento}}</td>
       </ng-container>
 
       <ng-container matColumnDef="contato">
         <th mat-header-cell *matHeaderCellDef style="text-align:center">Contato</th>
-        <td mat-cell *matCellDef="let row">{{row.contato}}</td>
+        <td mat-cell *matCellDef="let row">{{row.email}}</td>
       </ng-container>
 
       <ng-container matColumnDef="endereco">
         <th mat-header-cell *matHeaderCellDef style="text-align:center">Endereco</th>
-        <td mat-cell *matCellDef="let row">{{row.endereco}}</td>
+        <td mat-cell *matCellDef="let row">{{row.cidade +'/'+row.uf}}</td>
       </ng-container>
   
-      <ng-container matColumnDef="contrato">
-        <th mat-header-cell *matHeaderCellDef style="text-align:center">Contrato</th>
-        <td mat-cell *matCellDef="let row">{{row.contrato}}</td>
+      <ng-container matColumnDef="inadimplente">
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Inadimplente</th>
+        <td mat-cell *matCellDef="let row">{{row.inadimplenteString}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="loja">
+        <th mat-header-cell *matHeaderCellDef style="text-align:center">Loja</th>
+        <td mat-cell *matCellDef="let row">{{row.loja}}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
