--- a/AdministracaoLojistaAngular/src/app/loja/cadastrar-loja/cadastrar-loja.component.css
+++ b/AdministracaoLojistaAngular/src/app/loja/cadastrar-loja/cadastrar-loja.component.css
@@ -1,4 +1,14 @@
-button {
+form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+.botao {
     margin-bottom: 30px;
     margin-top: 30px;
+}
+
+.label{
+    color:mediumvioletred;
 }
