--- a/AdministracaoLojistaAngular/src/app/loja/listar-loja/listar-loja.component.html
+++ b/AdministracaoLojistaAngular/src/app/loja/listar-loja/listar-loja.component.html
@@ -1,70 +1,62 @@
 <div class="mat-elevation-z4">
-    <table mat-table>
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="loja">
-        <th mat-header-cell *matHeaderCellDef>Nome da Loja</th>
-        <td mat-cell *matCellDef="let row">{{row.loja}}</td>
-      </ng-container>
+  <table mat-table [dataSource]="lojas" style="text-align:center">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Id</th>
+      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="aluguel">
-        <th mat-header-cell *matHeaderCellDef>Aluguel</th>
-        <td mat-cell *matCellDef="let row">{{ row.aluguel | currency: 'BRL' }}</td>
-      </ng-container>
+    <ng-container matColumnDef="loja">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Nome da Loja</th>
+      <td mat-cell *matCellDef="let row">{{row.codigoLoja}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="tamanho">
-        <th mat-header-cell *matHeaderCellDef>Tamanho</th>
-        <td mat-cell *matCellDef="let row">{{ row.tamanho | currency: 'BRL' }}</td>
-      </ng-container>
+    <ng-container matColumnDef="aluguel">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Aluguel</th>
+      <td mat-cell *matCellDef="let row">{{ row.nomeLoja}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="setor">
-        <th mat-header-cell *matHeaderCellDef>Setor</th>
-        <td mat-cell *matCellDef="let row">{{ row.setor | currency: 'BRL' }}</td>
-      </ng-container>
+    <ng-container matColumnDef="tamanho">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Tamanho</th>
+      <td mat-cell *matCellDef="let row">{{ row.tamanho}}</td>
+    </ng-container>
 
-      
-      <ng-container matColumnDef="locatario">
-        <th mat-header-cell *matHeaderCellDef>Locatario</th>
-        <td mat-cell *matCellDef="let row">{{ row.locatario | currency: 'BRL' }}</td>
-      </ng-container>
+    <ng-container matColumnDef="setor">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Setor</th>
+      <td mat-cell *matCellDef="let row">{{ row.setor }}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="categoria">
-        <th mat-header-cell *matHeaderCellDef>Categoria</th>
-        <td mat-cell *matCellDef="let row">{{ row.categoria | currency: 'BRL' }}</td>
-      </ng-container>
+    <ng-container matColumnDef="locatario">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Locatario</th>
+      <td mat-cell *matCellDef="let row">{{ row.locatario }}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="situacao">
-        <th mat-header-cell *matHeaderCellDef>Situação</th>
-        <td mat-cell *matCellDef="let row">{{ row.situacao | currency: 'BRL' }}</td>
-      </ng-container>
+    <ng-container matColumnDef="categoria">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Categoria</th>
+      <td mat-cell *matCellDef="let row">{{ row.categoria}}</td>
+    </ng-container>
 
-      
+    <ng-container matColumnDef="situacao">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Situação</th>
+      <td mat-cell *matCellDef="let row">{{ row.situacao}}</td>
+    </ng-container>
 
-      <!-- Price Column -->
-     
-      <!-- Action Column -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>
-        <td mat-cell *matCellDef="let row">
-            <!-- <a routerLink="/products/update/{{ row.id }}" class="edit">
-                <i class="material-icons">
-                    edit
-                </i>
-            </a>
-            <a routerLink="/products/delete/{{ row.id }}" class="delete">
-                <i class="material-icons">
-                    delete
-                </i>
-            </a> -->
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Ações</th>
+      <td mat-cell *matCellDef="let row">
+        <!--<a routerLink="../editarLoja/{{ row.id }}" class="edit">
+            <i class="material-icons">
+                edit
+            </i>
+        </a>-->
+        <a (click)="delete(row)" class="delete">
+            <i class="material-icons">
+                delete
+            </i>
+        </a>
+    </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
