--- a/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
+++ b/AdministracaoLojistaAngular/src/app/toolbar/toolbar.component.html
@@ -43,7 +43,7 @@
         </div>
         <div style="width: 75px;align-self: left;">
             <span>
-                <button routerLink="/logout" data-toggle="tooltip" title="Fazer Logout" mat-icon-button>
+                <button routerLink="/login"  data-toggle="tooltip" title="Fazer Logout" mat-icon-button>
                     <mat-icon>exit_to_app</mat-icon>
                 </button>
             </span>
